# AdventOfCode

./: .gitignore  README.md
2020/: README.md  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  pyproject.toml
2025/: README.md  day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  pyproject.toml
utils/: day_template.py  loc.py  support.py  time_run.py
